Remove previous timestamp-based sync mechanism.
Reason: replaced by PID-based sync mechanism for guaranteed
eventual-consistency.

Signed-off-by: Yufei Cai <yufei.cai@bosch-si.com>